# StashZero

./: README.md  dev-setup.ps1  i.ps1  index.html  install.ps1  installed.txt  package-lock.json  package.json  project_notes.md  test_script.cjs  vite.config.js
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
public/: netvgold_favicon.jfif  splashscreen.html
scratch/: extract_icon.ps1
scripts/: sync-version.mjs
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: installer.rs  lib.rs  main.rs  network.rs  scripts.rs  sysinfo.rs  updater.rs
src/components/dashboard/: AppGrid.jsx  ControlCenter.jsx  SecurityCenter.css
src/components/icons/: AppLogo.jsx  ProjectLogo.jsx  SidebarIcon.jsx  TelemetryIcon.jsx
src/components/layout/: Header.jsx  Sidebar.jsx
src/components/modals/: AboutModal.jsx  AdminRequestModal.jsx  InstalledAppsModal.jsx  LogPanel.jsx  ProfilesModal.jsx  SettingsModal.jsx  UpdateModal.jsx
src/data/: library.js
src/hooks/: useCommandHistory.js  useCommandHistory.test.js  useInstallation.js  useKeyboardShortcuts.js  useLibrary.js  useLogPanelResize.js  usePerformanceMode.js  useSoundCloudPlayer.js  useTelemetry.js  useUpdateChecker.js
src/i18n/: translations.js  useTranslation.js
src/test/: setup.js
src/utils/: audio.js  settings.js  settings.test.js  tauri.js  updateChecker.js  updateChecker.test.js
