[package]
name = "app"
version = "0.2.6"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.6.0"
win-icon-extractor = { version = "0.1.0", default-features = false, features = ["png"] }
base64 = "0.22.1"
sha2 = "0.10.8"
hex = "0.4.3"
windows-sys = { version = "0.52.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_LibraryLoader"] }
sysinfo = "0.29.11"
tokio = { version = "1", features = ["full"] }
tauri-plugin-single-instance = "2"
once_cell = "1.19"
regex = "1.10"
tauri-plugin-notification = "2.0.0-rc"
